# regis

./: .gitattributes
client/: Makefile.am  cert.c  cert.h  config.h  config.h.in  config.status  configure  configure.ac  http.c  http.h  license.lic  regcli.c  regcli.conf  regcli.h
client/tools/: Makefile.am  convert.c  public.der  public.h
server/: config.php  index.php  reg.php
server/install/: index.php  install.css  install.sql  license.txt
server/style/: admin.css
server/templates/: editor.php  licenses.php  page_footer.php  page_header.php  transactions.php
